[package]
name = "collector"
version = "0.1.0"
authors = ["sisso <sissobr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "4.0.12"
aurora_db = { version = "*", path = "../aurora_db" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.*"
